[package]
name = "test_zone"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
log = "0.4.21"
serde_json = "1.0.117"
serde = { version = "1.0.117", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
tokio = { version = "1.38.0", features = ["full"] }
error-chain = "0.12.4"
pulldown-cmark = "0.11.0"
